# zephyr

arch/: Kconfig
arch/microblaze/: CMakeLists.txt  Kconfig  Kconfig.cache  Kconfig.compiler  Kconfig.features
arch/microblaze/core/: CMakeLists.txt  cache.c  cpu_idle.c  crt0.S  emulate_isr.S  exception.S  fatal.c  irq_manage.c  irq_offload.c  isr.S  microblaze_disable_dcache.S  microblaze_disable_exceptions.S  microblaze_disable_icache.S  microblaze_disable_interrupts.S  microblaze_enable_dcache.S  microblaze_enable_exceptions.S  microblaze_enable_icache.S  microblaze_enable_interrupts.S  microblaze_flush_cache_ext.S  microblaze_flush_cache_ext_range.S  microblaze_flush_dcache.S  microblaze_flush_dcache_range.S  microblaze_invalidate_cache_ext.S  microblaze_invalidate_cache_ext_range.S  microblaze_invalidate_dcache.S  microblaze_invalidate_dcache_range.S  microblaze_invalidate_icache.S  microblaze_invalidate_icache_range.S  prep_c.c  reboot.c  reset.S  swap.S  thread.c
arch/microblaze/core/offsets/: offsets.c
arch/microblaze/include/: kernel_arch_data.h  kernel_arch_func.h  offsets_short_arch.h
arch/microblaze/include/microblaze/: emulate_isr.h  mb_interface.h  microblaze_asm.h  microblaze_regs.h
boards/microblaze/: index.rst
boards/microblaze/qemu_microblaze/: Kconfig.board  Kconfig.defconfig  board-microblaze-zephyr-demo.dtb  board.cmake  qemu_microblaze.dts  (+2 more)
drivers/interrupt_controller/: CMakeLists.txt  Kconfig  Kconfig.xlnx  intc_xlnx.c
drivers/timer/: CMakeLists.txt  Kconfig  Kconfig.xlnx_tmrctr  xlnx_tmrctr.c
subsys/debug/: thread_info.c
(+35 files in other folders)
